# Flex-Auto

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  script.py  validate.py
.github/workflows/: flex-auto-tests.yml
cpp/: CMakeLists.txt
cpp/include/: flex
cpp/include/flex_include/: Autocallable.hpp  BrownianModel.hpp  GeometricBrownianModel.hpp  debug_utilities.hpp
cpp/src/: Autocallable.cpp  BrownianModel.cpp  GeometricBrownianModel.cpp
py/: main.cpp
pytests/: tests.py
tests/: CMakeLists.txt
tests/src/: main.cpp
